--- a/TFO/koszyk-empty.html
+++ b/TFO/koszyk-empty.html
@@ -48,8 +48,8 @@
     <!-- <link rel="stylesheet" href="/skin/3/css/stylo.css?v=9.8.8" /> -->
     <!-- <link rel="stylesheet" href="/skin/3/css/icon.css?v=9.8.8" /> -->
     <link rel="manifest" href="/snr-manifest.json" />
-    <link rel="stylesheet" href="http://127.0.0.1:5500/main.css" />
-    <script src="http://127.0.0.1:5500/js/main.js"></script>
+    <link rel="stylesheet" href="/main.css" />
+    <script src="/js/main.js"></script>
 
     <!--[if IE]>
       <link rel="stylesheet" type="text/css" href="/assets/css/ie.css" />
@@ -4443,7 +4443,7 @@
                     <p class="empty-text">Tu pojawią się Twoje produkty</p>
                     <div class="empty-image">
                       <img
-                        src="http://127.0.0.1:5500/skin/3/gif/prod_card_basket.png"
+                        src="/skin/3/gif/prod_card_basket.png"
                         alt="empty cart"
                       />
                     </div>
