--- a/TFO/koszyk-empty.html
+++ b/TFO/koszyk-empty.html
@@ -48,7 +48,9 @@
     <!-- <link rel="stylesheet" href="/skin/3/css/stylo.css?v=9.8.8" /> -->
     <!-- <link rel="stylesheet" href="/skin/3/css/icon.css?v=9.8.8" /> -->
     <link rel="manifest" href="/snr-manifest.json" />
-    <link rel="stylesheet" href="https://v-otree.github.io/koszyki/TFO/main.css" />
+    <!-- <link rel="stylesheet" href="https://v-otree.github.io/koszyki/TFO/main.css" /> -->
+    <link rel="stylesheet" href="./main.css" />
+
     <script src="http://127.0.0.1:5500/js/main.js"></script>
 
     <!--[if IE]>
